Code review comments part 1 - temp WIP.